# axum-static-server

./: .gitignore  Cargo.toml  README.md
public/: index.html
src/: main.rs
